# dpp-cmake-template

./: CMakeLists.txt  README.md  buildprogram.sh  fetchdeps.sh
src/: main.cxx
